# playground

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  uninstall.sh
configurator/: Info.plist.in  configurator.slint  controller.cpp  controller.h  dmanager.cpp  dmanager.h  gearbox.icns  tweak_editor.slint  tweaks.cpp  tweaks.h
grant/: amfid_handler.h  amfid_handler.m  main.m
installer/: Distribution.xml  conclusion.html  license.html  welcome.html
syphon/: breakpoint.c  exe.c  exe.h  log.h  mach_exc.c  main.c  options_loader.c  process.c  stepping.c  syphon.h  target.c
